feat(SearchInput): extends from combobox

--- a/src/components/ComboBox/combo-box.css
+++ b/src/components/ComboBox/combo-box.css
@@ -37,6 +37,7 @@
   display: flex;
   gap: var(--sgds-gap-xs);
   flex-wrap: wrap;
+  align-items: center;
   width: calc(100% - var(--sgds-icon-size-md, 1.25rem));
   /* deduct 1px from top and bottom padding due to border */
   padding: calc(var(--sgds-form-padding-y) - var(--sgds-form-border-width-default)) 0; 
