test(ComboBox,Select,SearchInput): loading state

--- a/src/components/ComboBox/combo-box.css
+++ b/src/components/ComboBox/combo-box.css
@@ -42,6 +42,8 @@
   /* deduct 1px from top and bottom padding due to border */
   padding: calc(var(--sgds-form-padding-y) - var(--sgds-form-border-width-default)) 0; 
 }
-.empty-menu {
-  padding: var(--sgds-padding-sm) var(--sgds-padding-lg, 20px);
+
+slot[id='default'].is-loading::slotted(*),
+slot[id='default'].is-loading{
+  display: none;
 }
