docs(SearchInput): stories wip

--- a/src/components/ComboBox/combo-box.css
+++ b/src/components/ComboBox/combo-box.css
@@ -47,3 +47,8 @@ slot[id='default'].is-loading::slotted(*),
 slot[id='default'].is-loading{
   display: none;
 }
+
+.form-clearable:focus-visible {
+  outline: var(--sgds-outline-focus);
+  outline-offset: var(--sgds-outline-offset-focus);
+}
