--- a/src/components/TableOfContents/table-of-contents.css
+++ b/src/components/TableOfContents/table-of-contents.css
@@ -5,13 +5,9 @@
 }
 
 slot:not([name])::slotted(*) {
-  --sgds-font-size-5: var(--sgds-font-size-4);
-  --sgds-font-size-6: var(--sgds-font-size-4);
- --sgds-margin-md: var(--sgds-margin-none);
-  --sgds-font-weight-bold: var(--sgds-font-weight-semibold);
-  margin-bottom: var(--sgds-margin-md, var(--sgds-margin-none));
-  font-size: var(--sgds-font-size-4);
-  font-weight: var(--sgds-font-weight-bold, var(--sgds-font-weight-semibold));
+  margin-bottom: var(--sgds-margin-none) !important;
+  font-size: var(--sgds-font-size-24) !important;
+  font-weight: var(--sgds-font-weight-semibold) !important;
 }
 
 .contents {
@@ -24,6 +20,5 @@ slot:not([name])::slotted(*) {
 }
 
 slot[name="contents"]::slotted(li) {
-  --sgds-margin-xs: var(--sgds-margin-none);
-  margin-top: var(--sgds-margin-xs, var(--sgds-margin-none));
+  margin-top: var(--sgds-margin-none) !important;
 }
