style(font size): remapping the font sizes to new and responsive font size variables

--- a/src/components/TableOfContents/table-of-contents.css
+++ b/src/components/TableOfContents/table-of-contents.css
@@ -5,12 +5,10 @@
 }
 
 slot:not([name])::slotted(*) {
-  --sgds-font-size-5: var(--sgds-font-size-4);
-  --sgds-font-size-6: var(--sgds-font-size-4);
   --sgds-margin-2-xs: var(--sgds-margin-none);
   --sgds-font-weight-bold: var(--sgds-font-weight-semibold);
   margin-bottom: var(--sgds-margin-2-xs, var(--sgds-margin-none));
-  font-size: var(--sgds-font-size-4);
+  font-size: var(--sgds-font-size-24) !important;
   font-weight: var(--sgds-font-weight-bold, var(--sgds-font-weight-semibold));
 }
 
