--- a/src/components/Toast/toast-container.css
+++ b/src/components/Toast/toast-container.css
@@ -3,23 +3,25 @@
   pointer-events: none;
   position: fixed;
   width: max-content;
-  z-index: 1090;
+  z-index: 1200;
+  /* Height of masthead + mainnav  */
+  --toast-container-top: calc(28px + 80px + var(--sgds-spacer-8));
 }
 
 .top-start {
-  top: 0;
+  top: var(--toast-container-top);
   left: 0;
 }
 
 .top-center {
-  top: 0;
+  top: var(--toast-container-top);
   left: 50%;
   transform: translateX(-50%);
 }
 
 .top-end {
-  top: 0;
-  right: 0;
+  top: var(--toast-container-top);
+  right: 32px;
 }
 
 .middle-start {
@@ -59,5 +61,5 @@
 slot {
   display: flex;
   flex-direction: column;
-  gap:  0.5rem;
+  gap: 0.5rem;
 }
